# xbrl-rdf

./: README.md  arelle_guide.md  concepts.txt  main.py  pyproject.toml  rdf_visualizer.py  xbrl_parser.py  xbrl_to_rdf.py
